--- a/SmartGel/Base.lproj/Main.storyboard
+++ b/SmartGel/Base.lproj/Main.storyboard
@@ -1085,6 +1085,144 @@
             </objects>
             <point key="canvasLocation" x="4044" y="118.29085457271366"/>
         </scene>
+        <!--Laboratory History-->
+        <scene sceneID="Quk-7R-PD4">
+            <objects>
+                <viewController storyboardIdentifier="SGLaboratoryItemViewController" id="odx-nC-8gw" customClass="SGLaboratoryItemViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IcC-m3-nRC"/>
+                        <viewControllerLayoutGuide type="bottom" id="omo-Q2-T1E"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lIW-7A-GoE">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sy6-8i-4di">
+                                <rect key="frame" x="192" y="154" width="384" height="512"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IVY-qa-7gO">
+                                        <rect key="frame" x="0.0" y="0.0" width="384" height="432"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6J9-MT-bGh">
+                                                <rect key="frame" x="0.0" y="0.0" width="190" height="388"/>
+                                                <color key="backgroundColor" red="0.75294117650000003" green="0.26274509800000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bWb-ct-ve7">
+                                                <rect key="frame" x="194" y="0.0" width="190" height="388"/>
+                                                <color key="backgroundColor" red="0.2784313725" green="0.3411764706" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            </view>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wOg-9c-fwH">
+                                                <rect key="frame" x="147" y="171" width="90" height="90"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="90" id="bf9-nm-qsj"/>
+                                                    <constraint firstAttribute="height" constant="90" id="qlB-IL-dGb"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="wOg-9c-fwH" firstAttribute="centerX" secondItem="IVY-qa-7gO" secondAttribute="centerX" id="Tdz-WD-yAa"/>
+                                            <constraint firstItem="bWb-ct-ve7" firstAttribute="top" secondItem="IVY-qa-7gO" secondAttribute="top" id="To8-to-sMq"/>
+                                            <constraint firstItem="bWb-ct-ve7" firstAttribute="width" secondItem="6J9-MT-bGh" secondAttribute="width" id="XSJ-aj-rvx"/>
+                                            <constraint firstAttribute="trailing" secondItem="bWb-ct-ve7" secondAttribute="trailing" id="hWc-7u-t9J"/>
+                                            <constraint firstAttribute="bottom" secondItem="bWb-ct-ve7" secondAttribute="bottom" constant="44" id="jcc-3e-cVc"/>
+                                            <constraint firstItem="6J9-MT-bGh" firstAttribute="width" secondItem="IVY-qa-7gO" secondAttribute="width" multiplier="0.495" id="ros-hX-XAw"/>
+                                            <constraint firstItem="6J9-MT-bGh" firstAttribute="leading" secondItem="IVY-qa-7gO" secondAttribute="leading" id="v9K-Sd-wks"/>
+                                            <constraint firstItem="6J9-MT-bGh" firstAttribute="top" secondItem="IVY-qa-7gO" secondAttribute="top" id="vDz-xc-EFB"/>
+                                            <constraint firstItem="wOg-9c-fwH" firstAttribute="centerY" secondItem="IVY-qa-7gO" secondAttribute="centerY" id="wnW-FY-oNc"/>
+                                            <constraint firstAttribute="bottom" secondItem="6J9-MT-bGh" secondAttribute="bottom" constant="44" id="yLB-Fx-6Qt"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wBQ-v2-wgU">
+                                        <rect key="frame" x="0.0" y="462" width="384" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4b-ye-WWy">
+                                                <rect key="frame" x="169" y="13" width="46" height="24"/>
+                                                <color key="backgroundColor" red="0.1960784314" green="0.2274509804" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.1960784314" green="0.2274509804" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="i4b-ye-WWy" firstAttribute="centerX" secondItem="wBQ-v2-wgU" secondAttribute="centerX" id="4Ox-yT-YoL"/>
+                                            <constraint firstItem="i4b-ye-WWy" firstAttribute="centerY" secondItem="wBQ-v2-wgU" secondAttribute="centerY" id="A9Z-IK-ts1"/>
+                                            <constraint firstAttribute="height" constant="50" id="Z2b-nJ-sYe"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="wBQ-v2-wgU" firstAttribute="top" secondItem="IVY-qa-7gO" secondAttribute="bottom" constant="30" id="3RC-vf-bN2"/>
+                                    <constraint firstAttribute="trailing" secondItem="IVY-qa-7gO" secondAttribute="trailing" id="6Sc-UW-p9G"/>
+                                    <constraint firstAttribute="trailing" secondItem="wBQ-v2-wgU" secondAttribute="trailing" id="7TC-Qf-pyB"/>
+                                    <constraint firstItem="IVY-qa-7gO" firstAttribute="top" secondItem="Sy6-8i-4di" secondAttribute="top" id="cDe-nc-OM4"/>
+                                    <constraint firstItem="wBQ-v2-wgU" firstAttribute="leading" secondItem="Sy6-8i-4di" secondAttribute="leading" id="fj5-jn-N5y"/>
+                                    <constraint firstItem="IVY-qa-7gO" firstAttribute="leading" secondItem="Sy6-8i-4di" secondAttribute="leading" id="kZg-dr-SD4"/>
+                                    <constraint firstAttribute="bottom" secondItem="wBQ-v2-wgU" secondAttribute="bottom" id="uD1-0O-IwD"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cRP-wq-5BD">
+                                <rect key="frame" x="138" y="718" width="493" height="166"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Customer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUa-Sh-tX6">
+                                        <rect key="frame" x="27" y="18" width="164" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tag: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhH-q7-0kX">
+                                        <rect key="frame" x="27" y="54" width="164" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Afz-9j-BrB">
+                                        <rect key="frame" x="27" y="90" width="164" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="23,Dec 2017 11:77:99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6x-A2-aU2">
+                                        <rect key="frame" x="27" y="125" width="194" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.19607843137254902" green="0.22745098039215686" blue="0.27058823529411763" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Sy6-8i-4di" firstAttribute="top" secondItem="IcC-m3-nRC" secondAttribute="bottom" constant="90" id="Pnd-KJ-sAS"/>
+                            <constraint firstItem="Sy6-8i-4di" firstAttribute="height" secondItem="lIW-7A-GoE" secondAttribute="height" multiplier="0.5" id="RNj-tM-PwS"/>
+                            <constraint firstItem="Sy6-8i-4di" firstAttribute="centerX" secondItem="lIW-7A-GoE" secondAttribute="centerX" id="v6Y-CE-tPz"/>
+                            <constraint firstItem="Sy6-8i-4di" firstAttribute="width" secondItem="lIW-7A-GoE" secondAttribute="width" multiplier="0.5" id="viC-Cl-EcW"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Laboratory History" id="Mgy-h2-lSV">
+                        <barButtonItem key="leftBarButtonItem" image="ic_menu" id="ibu-vf-kON">
+                            <connections>
+                                <action selector="presentLeftMenuViewController:" destination="odx-nC-8gw" id="CkI-OE-Oyi"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="trash" id="FEn-lh-KfW"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yrf-dW-LfS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="900.78125" y="1541.6015625"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ic_back" width="18" height="18"/>
